--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
-    <body>
-<div>Teachable Machine Image Model</div>
+    <body style="text-align: center;">
+<div>
+    <h1>Modelo generado por Teachable Machine Image Model</h1>
+<p>Apretar el botón y mostrarle y ocultarle una cartuchera a la cámara.</p>
+</div>
 <button type="button" onclick="init()">Start</button>
 <div id="webcam-container"></div>
 <div id="label-container"></div>
